[package]
name = "nsds"
version = "0.1.0"
authors = ["d0nut <nathanial.lattimer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "iam"
path = "src/iam/iam.rs"

[[bin]]
name = "alice"
path = "src/alice/alice.rs"

[[bin]]
name = "bob"
path = "src/bob/bob.rs"

[[bin]]
name = "challenge"
path = "src/challenge/challenge.rs"

[[bin]]
name = "solution"
path = "src/solution/solution.rs"

[lib]
name = "shared_lib"
path = "src/shared_lib/mod.rs"


[dependencies]
gotham = { git = "https://github.com/gotham-rs/gotham.git" }
gotham_derive = { git = "https://github.com/gotham-rs/gotham.git" }
futures = "^0.3"
mime = "0.3.16"
reqwest = { version = "^0.10", default-features = false, features = ["rustls-tls", "blocking", "json"] }
serde = { version = "^1.0", features = ["derive"] }
serde_derive = "^1.0"
serde_json = "^1.0"
hyper = "^0.13"
rand = "0.7.3"
base64 = "0.12.0"
tokio = "^0.2"
sha2 = "0.8.1"
rsa = "0.2.0"
chacha20poly1305 = "0.4.1"
aead = "0.2.0"
lru-cache = "0.1.2"